@@ -284,6 +284,9 @@ public abstract class CollationTestBase extends LuceneTestCase {
       termAtt.fillBytesRef();
       // ensure we make a copy of the actual bytes too
       map.put(term, BytesRef.deepCopyOf(bytes));
+      assertFalse(ts.incrementToken());
+      ts.end();
+      ts.close();
     }
     
     Thread threads[] = new Thread[numThreads];
@@ -302,6 +305,9 @@ public abstract class CollationTestBase extends LuceneTestCase {
               assertTrue(ts.incrementToken());
               termAtt.fillBytesRef();
               assertEquals(expected, bytes);
+              assertFalse(ts.incrementToken());
+              ts.end();
+              ts.close();
             }
           } catch (IOException e) {
             throw new RuntimeException(e);
